Fix width issue on iOS with response images

--- a/css/style.css
+++ b/css/style.css
@@ -75,6 +75,8 @@ body {
 
 .response img {
 	border-radius: 4px;
+	max-height: 1em; 
+	max-width: 1em;
 }
 
 .response-text {
@@ -172,6 +174,8 @@ and (orientation : portrait) {
 
 .response img {
 	border-radius: 4px;
+	max-height: 1em; 
+	max-width: 200px;
 }
 
 .response-text {
